--- a/exam-front/src/index.html
+++ b/exam-front/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- lottie link -->
+  <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
   <meta charset="utf-8">
   <title>ExamFront</title>
   <base href="/">
